# TextEditor

./: .gitignore  CMakeLists.txt
src/: main.cpp  utilities.h
src/application/: Application.cpp  Application.h  Globals.h  IPane.h  IRenderer.h  IWindow.h  InputManager.cpp  InputManager.h  RenderManager.cpp  RenderManager.h
src/application/events/: Event.h  KeyboardEvent.h
src/core/: Register.cpp  Register.h  TextBuffer.cpp  TextBuffer.h  custom_assert.h
src/core/commands/: Command.h  EraseChar.cpp  EraseChar.h  EraseNewline.cpp  EraseNewline.h  InsertChar.cpp  InsertChar.h  InsertNewline.cpp  InsertNewline.h  TextController.cpp  TextController.h  Transaction.h
src/editor/: Editor.cpp  Editor.h
src/io/: FileHandler.cpp  FileHandler.h
src/platform/tui/: NcursesPane.cpp  NcursesPane.h  NcursesRenderer.cpp  NcursesRenderer.h  NcursesWindow.cpp  NcursesWindow.h
src/rendering/: EditorPane.cpp  EditorPane.h  InfoPane.cpp  InfoPane.h  Pane.cpp  Pane.h  PaneManager.cpp  PaneManager.h
src/tui/: BoxedWindow.cpp  TUI.cpp  TUI.h  Window.cpp  Window.h
src/tui/elements/: MainWindow.cpp  MainWindow.h
src/tui/primitives/: BoxedWindow.h  Window.cpp  Window.h
src/ui_elements/platform/tui/: DialogBox.cpp  DialogBox.h  DialogBoxNcursesPane.cpp  DialogBoxNcursesPane.h  EditorNcursesPane.cpp  EditorNcursesPane.h  InfoNcursesPane.cpp  InfoNcursesPane.h
tests/: CMakeLists.txt  main.cpp
tests/core/: TextBufferTest.cpp
tests/core/commands/: TextControllerTest.cpp
tests/editor/: EditorTest.cpp
